platform/environments/development/reference-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reference-service
  namespace: development
  labels:
    app: reference-service
spec:
  type: ClusterIP
  selector:
    app: reference-service
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
